# cloudbridge

./: .codeclimate.yml  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  Dockerfile.dev  LICENSE  README.md  README.rst  TODO.rst  alex-test2-masterkey.pem  az-new.pem  azure-deployment copy.py  azure-deployment.py  azureInstanceType.json  codeclimate.yml  codeclimate.yml.txt  codecov.yml  credentials.tar.gz.enc  example.py  execute.py  getting started with azure provider for cloudbridge.docx  info.txt  pyproject.toml  rc-extract.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: prt_exfil.sh
.github/aws/: permissions-policy.json  setup.sh  trust-policy.json
.github/workflows/: aws.yaml  azure.yaml  build_containers.yaml  coverage.yaml  deploy.yaml  gcp.yaml  integration-cloud.yaml  integration.yaml  lint.yaml  mock.yaml  openstack.yaml  pr-label-strip.yaml
azure_integration_test/: helpers.py  test_integration_azure_image_service.py  test_integration_azure_instance_service.py  test_integration_azure_instance_type_service.py  test_integration_azure_key_pair_service.py  test_integration_azure_network_service.py  test_integration_azure_object_store_service.py  test_integration_azure_region_service.py  test_integration_azure_security_group.py  test_integration_azure_snapshot_service.py  test_integration_azure_subnet_service.py  test_integration_azure_volume_service.py
azure_test/: helpers.py  test_azure_helpers.py  test_azure_image_service.py  test_azure_instance_service.py  test_azure_instance_type_service.py  test_azure_key_pair_service.py  test_azure_network_service.py  test_azure_object_store_service.py  test_azure_provider.py  test_azure_region_service.py  test_azure_resource_group.py  test_azure_security_service.py  test_azure_snapshots_service.py  test_azure_storage_account.py  test_azure_subnet_service.py  test_azure_volume_service.py
cloudbridge/: __init__.py  example.py  factory.py
cloudbridge/base/: __init__.py  helpers.py  middleware.py  provider.py  resources.py  services.py  subservices.py
cloudbridge/cloud/: __init__.py  base.py  factory.py  helpers.py
cloudbridge/interfaces/: exceptions.py  provider.py  resources.py  services.py  subservices.py
cloudbridge/providers/: base.py  factory.py  interfaces.py
docs/: Makefile  concepts.rst  conf.py  getting_started.rst  index.rst  requirements.txt
integration_test/: __init__.py  helpers.py  test_integration_azure_object_store_service.py  test_integration_azure_security_group.py  test_integration_azure_volume_service.py
metaresults/: aws-summary.csv  azure-summary.csv  filtered-aws-block_store.res  filtered-aws-cloud_factory.res  filtered-aws-cloud_helpers.res  filtered-aws-compute.res  filtered-aws-image.res  filtered-aws-network.res  filtered-aws-object_life_cycle.res  filtered-aws-object_store.res  filtered-aws-region.res  filtered-aws-security.res  filtered-aws-vm_types.res  filtered-azure-block_store.res  filtered-azure-cloud_factory.res  filtered-azure-cloud_helpers.res  filtered-azure-compute.res  filtered-azure-image.res  filtered-azure-network.res  filtered-azure-object_life_cycle.res  filtered-azure-object_store.res  filtered-azure-region.res  filtered-azure-security.res  filtered-azure-vm_types.res  filtered-gcp-block_store.res  filtered-gcp-cloud_factory.res  filtered-gcp-cloud_helpers.res  filtered-gcp-compute.res  filtered-gcp-image.res  filtered-gcp-network.res  filtered-gcp-object_life_cycle.res  filtered-gcp-object_store.res  filtered-gcp-region.res  filtered-gcp-security.res  filtered-gcp-vm_types.res  filtered-openstack-block_store.res  filtered-openstack-cloud_factory.res  filtered-openstack-cloud_helpers.res  filtered-openstack-compute.res  filtered-openstack-image.res  (+10 more)
profiling-scripts/: filter-summarize.py  run-all.sh  run-provider.sh  run_single.py  run_single.py.lprof
results/: aws-block_store.res  aws-cloud_factory.res  aws-cloud_helpers.res  aws-compute.res  aws-image.res  aws-network.res  aws-object_life_cycle.res  aws-object_store.res  aws-region.res  aws-security.res  aws-vm_types.res  azure-block_store.res  azure-cloud_factory.res  azure-cloud_helpers.res  azure-compute.res  azure-image.res  azure-network.res  azure-object_life_cycle.res  azure-object_store.res  azure-region.res  azure-security.res  azure-vm_types.res  block_store.res  cloud_factory.res  cloud_helpers.res  compute.res  gcp-block_store.res  gcp-cloud_factory.res  gcp-cloud_helpers.res  gcp-compute.res  gcp-image.res  gcp-network.res  gcp-object_life_cycle.res  gcp-object_store.res  gcp-region.res  gcp-security.res  gcp-vm_types.res  image.res  interface.res  network.res  (+16 more)
scripts/: bucket_upload.py
test/: __init__.py  helpers.py  test_azure_helpers.py  test_azure_object_store_service.py  test_azure_provider.py  test_azure_resource_group.py  test_azure_security_service.py  test_azure_volume_service.py  test_base_helpers.py  test_block_store_service.py  test_cloud_factory.py  test_cloud_helpers.py  test_compute_service.py  test_event_system.py  test_image_service.py  test_instance_types_service.py  test_interface.py  test_middleware_system.py  test_network_service.py  test_object_life_cycle.py  test_object_store_service.py  test_provider_auth.py  test_provider_block_store_service.py  test_provider_compute_service.py  test_provider_factory.py  test_provider_image_service.py  test_provider_interface.py  test_provider_object_store_service.py  test_provider_region_service.py  test_provider_security_service.py  test_region_service.py  test_security_service.py  test_snapshot_state.py  test_vm_types_service.py  testprovidersecurityservice.py
tests/: TestProviderSecurityService.py  __init__.py  test_block_store_service.py  test_cloud_factory.py  test_cloud_helpers.py  test_compute_service.py  test_dns_service.py  test_image_service.py  test_interface.py  test_middleware_system.py  test_multipart_driver.py  test_network_service.py  test_object_life_cycle.py  test_object_store_service.py  test_region_service.py  test_security_service.py  test_vm_types_service.py
(+179 files in other folders)
